[package]
name = "tir"
version = "0.1.0"
authors = ["Andreas <andreas.kroepelin@uni-jena.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
uom = "0.27.0"
regex = "1"
prettytable-rs = "0.8"
colored = "1.9"
anyhow = "1.0"
